# TaskMgmt

./: .env.db-example  .env.server-example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
server/: .coverage  .dockerignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Dockerfile.server  Dockerfile.worker  docs.py  make-docs.sh  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 10dd9d92fd15_.py  2025_02_12_1548-6d5b0a3730ce_initial_migration.py  3cc36718d8e3_.py  52d9134859c1_.py  f0041b36d1b4_.py
server/api/: main.py
server/api/di/: auth_service.py  current_email_verification_user.py  current_user.py  database_config.py  email_verification_repo.py  jwt_service.py  redis_config.py  refresh_token_repo.py  runtime_settings.py  session.py  settings.py  token_config.py  user_repo.py
server/api/dto/: auth.py  base.py
server/api/http/: auth.py  profile.py
server/api/routing/: auth.py  profile.py
server/api/services/: auth.py  jwt.py
server/api/settings/: __init__.py  runtime_settings.py
server/api/utils/: hash.py
server/app/: main.py
server/app/config/: database.py
server/app/di/: auth_service.py  current_user.py  jwt_service.py  session.py  token_config.py
server/app/dto/: auth.py  profile.py
server/app/routing/: auth.py  profile.py
server/app/services/: auth.py  jwt.py
server/docs/: openapi.json  redoc-static.html
server/shared/: settings.py  utils.py
server/shared/abc/: __init__.py  entity.py  (+2 more)
server/tests/: test_auth.py
server/worker/: __init__.py  cleanup_refresh_tokens.py
(+59 files in other folders)
